[gd_scene load_steps=3 format=3 uid="uid://dhgwnsgolkoom"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_3nca2"]
[ext_resource type="FontFile" uid="uid://0db4dwfa716p" path="res://Font/PublicPixel-z84yD.ttf" id="1_nhce8"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_3nca2")

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
offset_left = 11.0
offset_top = 5.0
offset_right = 203.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("1_nhce8")
theme_override_font_sizes/font_size = 22
text = "Score: 0"

[node name="Message" type="Label" parent="."]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -18.5
offset_right = 88.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_nhce8")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 96.0
offset_right = 55.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_nhce8")
theme_override_font_sizes/font_size = 16
text = "Press \"LEFT CLICK\" to Start"

[node name="MessageTimer" type="Timer" parent="."]

[node name="CloseBackground" type="ColorRect" parent="."]
visible = false
offset_right = 800.0
offset_bottom = 480.0
color = Color(0, 0, 0, 0.211765)

[node name="TopRetro" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 32.0
color = Color(0, 0, 0, 1)

[node name="BottomRetro" type="ColorRect" parent="."]
offset_top = 448.0
offset_right = 800.0
offset_bottom = 480.0
color = Color(0, 0, 0, 1)

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
